# winapi_interface

./: Cargo.toml
src/: main.rs  validating_value.rs
